<resources>
    <string name="app_name">MvvmHiltBodyFatPercentageCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Body Fat Percentage\nCalculator</string>
    <string name="nim">NIM 10122362</string>
    <string name="nama">Louis Jonathan Susanto Putra</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="input_berat_badan">Berat Badan (kg)</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="input_tinggi_badan">Tinggi Badan (cm)</string>
    <string name="usia">Usia</string>
    <string name="input_usia">Usia dalam Tahun</string>
    <string name="rad_gender">Jenis Kelamin</string>
    <string name="rad_laki">Laki-Laki</string>
    <string name="rad_perempuan">Perempuan</string>
    <string name="info">Info Pengembang</string>
    <string name="developed">Developed by:</string>
    <string name="hitung_bmi">Hitung BMI</string>
    <string name="bmi_result">BMI Fat (%) Result</string>
    <string name="nilai_bmi">Nilai BMI Anda:</string>
    <string name="kategori_bmi">Kategori BMI:</string>
    <string name="bfp">Nilai BFP Anda:</string>
</resources>