<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".view.InputFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edt_berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_berat_badan"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi_badan"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edt_tinggi_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_tinggi_badan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usia"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/edt_usia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/input_usia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rad_gender"
        android:textSize="20sp"
        android:layout_marginBottom="10dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rad_lakilaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:textSize="16sp"
            android:text="@string/rad_laki"/>

        <RadioButton
            android:id="@+id/rad_perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/rad_perempuan"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_hitung_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_bmi"/>

</LinearLayout>