<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".view.OutputFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/bmi_result"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/nilai_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/nilai_bmi"/>

    <TextView
        android:id="@+id/nilai_bfp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/bfp"/>

    <TextView
        android:id="@+id/kategori_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:text="@string/kategori_bmi"/>

    <Button
        android:id="@+id/btn_info_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:layout_marginBottom="20dp"/>

</LinearLayout>